ace/toolkit-no-tracing/toolkit-no-tracing-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: toolkit-no-tracing-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - toolkit-no-tracing.istio-ace-example.eu-gb.containers.appdomain.cloud
