ace/toolkit-no-tracing/toolkit-no-tracing-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: toolkit-no-tracing-dr
spec:
  host: toolkit-no-tracing-is
